# agent-beacon

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
agent_light/: __init__.py  cli.py  controller.py  definitions.py  dialogs.py  hook_events.py  hook_install.py  hook_registry.py  models.py  notify.py  paths.py  process_source.py  runtime_log.py  scanner.py  status.py  tray_app.py
packaging/: agent_beacon_launcher.py  windows_installer.nsi
tests/: test_controller.py  test_dialogs.py  test_hook_events.py  test_hook_install.py  test_hook_registry.py  test_paths.py  test_process_source.py  test_runtime_log.py  test_scanner.py  test_status.py  test_tray_semantics.py
